--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
+    "flowbite": "^2.4.1",
+    "flowbite-vue": "^0.1.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-material-design-icons": "^5.3.0",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.40",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
 }
